# python-circuit-breaker

./: README.md  TODO  main.py  pyproject.toml
breaker/: __init__.py  breaker.py  pyproject.toml
example/: app.py  conftest.py  pyproject.toml
example/api/: api.py
example/tests/: breaker_test.py  gateway_test.py  service_test.py
gateway/: breaker.py  breaker_state.py  main.py
service/: pyproject.toml
src/breaker/: __init__.py  breaker.py
src/breaker/tests/: conftest.py
tests/integration/: gateway_test.py  service_test.py
tests/unit/: breaker_test.py
tests/unit/gateway/: breaker_test.py
