[project]
name = "python-circuit-breaker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "time-machine>=3.2.0",
]
